@@ -54,6 +54,13 @@
 	  android:password="true"
 	  android:singleLine="true"
 	  android:hint="@string/entry_password"/>
+	<ImageButton android:id="@+id/browse_button"
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content"
+	  android:src="@drawable/ic_launcher_folder_small"
+	  android:layout_below="@id/password"
+	  android:layout_alignParentRight="true"
+	/>
 	<EditText android:id="@+id/pass_keyfile" 
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content" 
@@ -61,13 +68,6 @@
 	  android:layout_toLeftOf="@id/browse_button"
 	  android:singleLine="true"
 	  android:hint="@string/entry_keyfile"/>
-	<ImageButton android:id="@+id/browse_button"
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:src="@drawable/ic_launcher_folder_small"
-	  android:layout_alignTop="@id/pass_keyfile"
-	  android:layout_alignParentRight="true"
-	/>
 	<Button android:id="@+id/pass_ok" 
 	  android:text="@string/pass_ok"
 	  android:layout_width="100sp"
